examples/GKE/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandwich-tracker-deployment
  labels:
    app: sandwich-tracker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandwich-tracker-app
  template:
    metadata:
      labels:
        app: sandwich-tracker-app
    spec:
      containers:
        - name: sandwich-tracker
          image: us-central1-docker.pkg.dev/test-iap-491718/sandwich-apps/sandwichtracker:1.4.0
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          ports:
          - name: http
            containerPort: 8080
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 5
