examples/GKE/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandwich-service
  labels:
    app: sandwich-tracker-app
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sandwich-tracker-app
